# hpp-quadcopter

./: CMakeLists.txt  README.md
data/: package.xml
data/meshes/: scene.stl  scene1.stl  scene_cube.stl  scene_obs.stl
data/srdf/: quadcopter.srdf
data/urdf/: quadcopter.urdf  scene.urdf
include/hpp/quadcopter/: configuration-shooter.hh  distance.hh  flat-path.hh  fwd.hh  steering-method.hh
include/mav_msgs/: conversions.h
include/mav_planning_utils/: polynomial_optimization.h
include/mav_planning_utils/implementation/: polynomial_optimization_impl.h  polynomial_trajectory_impl.h
script/: quadcopter.py
src/: CMakeLists.txt  configuration-shooter.cc  distance.cc  flat-path.cc  main.cc  steering-method.cc
src/hpp/quadcopter/: __init__.py  robot.py
src/mav_planning_utils/: CMakeLists.txt  trajectory_sampling.cpp
